Added support for having OpenPRS to talk to TclservClient.
Added the code to get the tclservclient functions assicated to each request.
It works for the demo-genom module together with the demo-transgen supervisor.

For now, -o assumes -x, but I will try to make it smarter and only link to the code when -x is used.

If people want to give it a spin... to test it more thorougly, let me know.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-03-02  Felix Ingrand  <felix@cturtle>
+
+	* openprsGen.c (declareRequests): Added the tclservclient declaration.
+
 2005-07-25  Francois Felix Ingrand  <felix@laas.fr>
 
 	* parser.y (main): Added $moduleOprs variable for the name of the module-oprs.pc file...
