Typo in Anthony's name.

--- a/doc/slides/genom-slides.tex
+++ b/doc/slides/genom-slides.tex
@@ -29,9 +29,9 @@
 \lstset{frame=single,basicstyle=\ttfamily}
 %-------------------------------------------------
 \title{The Generator of Modules \\ \GenoM{}}
- 
-\author{Sara Fleury - Anthony Malley - Matthieu Herrb}
- 
+
+\author{Sara Fleury - Anthony Mallet - Matthieu Herrb}
+
 \institute{\includegraphics[height=2cm]{openlogo}}
 \date{January 2012}
 
