Dot changed to semicolon for consistend endings of items in documentation
Bugzilla #200

--- a/doc/user_guide/tex/genom-codels.tex
+++ b/doc/user_guide/tex/genom-codels.tex
@@ -971,7 +971,7 @@ important to respect a few coding rules.
 
 \item Avoid global variables;
 
-\item Avoid magic numbers (use constants and \texttt{\#define}).
+\item Avoid magic numbers (use constants and \texttt{\#define});
 
 \item Choose a uniform style, and follow it. For instance, the VxWorks
       programmers manual recommends the use of 
@@ -983,7 +983,7 @@ word but the first (e.g. \texttt{controlSpeed}) for symbols;
 with e.g. the module name;
 
 \item Use explicit names. Avoid short names such as \texttt{i}, \texttt{nb},
-\texttt{num}.
+\texttt{num};
 
 \item Check validity of input parameters and return a report in case of
 an error.
