Todo comment about missing description about getting statistics in doc.
Bugzilla #200

--- a/doc/user_guide/tex/genom-codels.tex
+++ b/doc/user_guide/tex/genom-codels.tex
@@ -1031,6 +1031,7 @@ can always fail, and  thus block  an execution.  It  is  safer to do  all
 allocation (static or dynamic) upon module startup.
 \end{itemize} 
 
+% TODO: description of the following feature is missing.
 To  check that your  activities  do no  last   too much, you  can display
 precise statistics   for  codels. See  chapter~\ref{cha|using}   in  this
 document.
