Escaping of '_' character in code example documentation fixed
Bugzilla #200

--- a/doc/user_guide/tex/genom-using.tex
+++ b/doc/user_guide/tex/genom-using.tex
@@ -477,7 +477,7 @@ static double piloDemoMonitorOut;         /* Output parameter */
 \subsubsection{Receiving replies: \texttt{ReplyRcv}}
 
 \begin{center}\begin{cartouche}\small\begin{verbatim}
-  int ...ReplyRcv(CLIENT\_ID clientId,
+  int ...ReplyRcv(CLIENT_ID clientId,
                   int rqstId, int block,
                   [OUT *out], int *activity, int *report);
 \end{verbatim}\end{cartouche}\end{center}
