Use of \texttt{} LaTeX command fixed in documentation
Bugzilla #200

--- a/doc/user_guide/tex/genom-using.tex
+++ b/doc/user_guide/tex/genom-using.tex
@@ -526,7 +526,7 @@ instance \texttt{demoTclservClientInit} in the library
 a \texttt{TCLSERV\_CLIENT\_ID} can be shared by multiples modules.
 
 Before you  quit, you must  free this connection with \texttt{demoTclservClientEnd}
-and close the connection with the Tclserv with texttt{tclserv\_client\_destroy}.
+and close the connection with the Tclserv with \texttt{tclserv\_client\_destroy}.
 
 
 \subsection{Sending requests and receiving replies witch tclservClientMsgLib}
